--- a/index.html
+++ b/index.html
@@ -213,13 +213,13 @@
     </section>
 
 <section id="sobre-nosotros">
-    <div class="container">
-        <h2 class="text-center">Sobre Distribuidora El Ranchú</h2>
-        <p style="text-align: left; max-width: 720px; margin: auto; font-size: 1.1rem; line-height: 1.7; color: var(--color-texto);">
+    <div class="container text-center">
+        <h2>Sobre Distribuidora El Ranchú</h2>
+        <p style="max-width: 720px; margin: auto; font-size: 1.1rem; line-height: 1.7; color: var(--color-texto);">
             Distribuidora El Ranchú es un emprendimiento familiar con más de dos décadas de trayectoria.
             Nuestra misión es brindar productos de calidad y asesoramiento cercano, construyendo relaciones de confianza duraderas.
         </p>
-        <img src="https://images.unsplash.com/photo-1542831371-29b0f74f9713?auto=format&fit=crop&w=800&q=80"
+        <img src="https://images.unsplash.com/photo-1542831371-29b0f74f9713?auto=format&fit=crop&w=800&q=80" 
              alt="Equipo familiar" class="section-image" />
     </div>
 </section>
