--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <body>
     <header class="py-3">
         <div class="container d-flex justify-content-between align-items-center">
-            <img src="Isologo.png" alt="Logo Distribuidora El Ranchú" class="img-logo" />
+            <img src="https://i.ibb.co/tPb6wNLt/Logo.jpg" alt="Logo" border="0" />
             <nav>
                 <ul class="nav">
                     <li class="nav-item"><a class="nav-link" href="#bienvenida">Inicio</a></li>
