--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
     <section id="bienvenida">
         <div class="container">
-            <h1>Bienvenidos a Distribuidora El Ranchú</h1>
+            <h1>margin-top: 1rem; Bienvenidos a Distribuidora El Ranchú</h1>
             <p>
                 Somos un proyecto familiar que lleva años dedicándose a la venta e importación de productos
                 para mascotas, con especial enfoque en peces de agua fría y cálida. Nuestra pasión y experiencia
