--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 
         header {
             background-color: var(--color-primario);
-        padding: 0.5rem 1rem;
-        text-align: center;
+    padding: 0.5rem 1rem;
+    text-align: center; /* centra el contenido */
+    width: 100vw; /* asegura que ocupe todo el ancho de la ventana */
+    box-sizing: border-box; /* incluye padding dentro del ancho */
         }
 
         nav a {
@@ -131,11 +133,12 @@
 
         /* Imagen ajustada para logo e imágenes de secciones */
         .img-logo {
-        width: 100%;          
-        height: auto;         
-        max-height: 80px;     
-        object-fit: contain;  
-        display: inline-block;
+        display: block;  /* elimina espacio en línea */
+    width: 100%;     /* ocupa todo el ancho del contenedor */
+    max-height: 80px; /* limita la altura para que no crezca demasiado */
+    height: auto;    /* mantiene proporción */
+    margin: 0 auto;  /* centra la imagen */
+    object-fit: contain; /* ajusta sin deformar */
         }
 
         .section-image {
@@ -163,7 +166,7 @@
 
     <section id="bienvenida">
         <div class="container">
-            <h1>margin-top: 1rem; Bienvenidos a Distribuidora El Ranchú</h1>
+            <h1>Bienvenidos a Distribuidora El Ranchú</h1>
             <p>
                 Somos un proyecto familiar que lleva años dedicándose a la venta e importación de productos
                 para mascotas, con especial enfoque en peces de agua fría y cálida. Nuestra pasión y experiencia
