--- a/index.html
+++ b/index.html
@@ -30,13 +30,9 @@
             color: var(--color-primario);
         }
 
-        header {
-            background-color: var(--color-primario);
-    padding: 0.5rem 1rem;
-    text-align: center; /* centra el contenido */
-    width: 100vw; /* asegura que ocupe todo el ancho de la ventana */
-    box-sizing: border-box; /* incluye padding dentro del ancho */
-        }
+    <header>
+          <img src="Isologo.png" alt="Logo Distribuidora El Ranchú" class="img-logo" />
+    </header>
 
         nav a {
             color: white !important;
