--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             color: var(--color-primario);
         }
 
-    <header>
-          <img src="Isologo.png" alt="Logo Distribuidora El Ranchú" class="img-logo" />
-    </header>
+    header {
+            background-color: var(--color-primario);
+        }
 
         nav a {
             color: white !important;
