--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     width: 100%;     /* ocupa todo el ancho del contenedor */
     max-height: 80px; /* limita la altura para que no crezca demasiado */
     height: auto;    /* mantiene proporción */
+    margin: 0;  /* centra la imagen */
     object-fit: contain; /* ajusta sin deformar */
         }
 
