--- a/index.html
+++ b/index.html
@@ -161,19 +161,19 @@ nav ul.nav {
     </style>
 </head>
 <body>
-    <header class="py-3">
-        <div class="container d-flex justify-content-between align-items-center">
-            <img src="https://i.ibb.co/tPb6wNLt/Logo.jpg" alt="Logo Distribuidora El Ranchú" class="img-logo" />
-            <nav>
-                <ul class="nav">
-                    <li class="nav-item"><a class="nav-link" href="#bienvenida">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#productos">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#sobre-nosotros">Sobre Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <header>
+    <div class="container container-header">
+        <img src="https://i.ibb.co/tPb6wNLt/Logo.jpg" alt="Logo Distribuidora El Ranchú" class="img-logo" />
+        <nav>
+            <ul class="nav">
+                <li class="nav-item"><a class="nav-link text-white" href="#bienvenida">Inicio</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="#productos">Productos</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="#sobre-nosotros">Sobre Nosotros</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="#contacto">Contacto</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
     <section id="bienvenida">
         <div class="container">
