--- a/index.html
+++ b/index.html
@@ -145,11 +145,12 @@ nav ul.nav {
         /* Imagen ajustada para logo e imágenes de secciones */
         .img-logo {
     flex-grow: 1;
-    max-height: 80px;
+    max-height: 100px;
     height: auto;
     object-fit: contain;
     margin: 0;
     width: auto;
+   float: left;  /* para que se alinee a la izquierda */
 }
 
         .section-image {
